--- a/backEnd/src/main/resources/application.properties
+++ b/backEnd/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=dbasystem
 spring.datasource.password=123
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+-------------------
+
